@@ -2,6 +2,8 @@
 # $Id$
 
 mm-dd-10 - Version 5.1.14
+   - Patch for problem where "noAccessToProcedureBodies=true" was causing "underprivileged" user not to have access to procedures created by him.
+
    - Patch for Bug#56305, unhandled NPE in DatabaseMetaData.java when calling wrong-cased function without access to mysql.proc.
    Although simple by itself, some more enhancements were needed for everything to function properly.
    So, along with catching potential NPE due to server bug, a guard against calling JDBC functions with db_name.proc_name
